[metadata]
name = sphinx-blog
version = attr: sphinx_blog.__version__
url = https://tanayseven.com/sphinx-blog/
project_urls =
    Documentation = https://tanayseven.com/sphinx-blog/docs/
    Changes = https://tanayseven.com/sphinx-blog/changes/
    Source Code = https://github.com/tanayseven/sphinx-blog/
    Issue Tracker = https://github.com/tanayseven/sphinx-blog/issues/
    Twitter = https://twitter.com/tanayseven
license = MIT
author = Tanay PrabhuDesai
author_email = tanayseven@gmail.com
description = A simple blogging engine written as a Sphinx plugin
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Plugins
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Internet :: WWW/HTTP :: Site Management
    Topic :: Printing
    Topic :: Text Processing
    Topic :: Text Processing :: Markup
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Text Processing :: Markup :: LaTeX
    Topic :: Utilities

[options]
packages = find:
python_requires = >= 3.10
